--- a/SQLEdgeSamples/IoTEdgeSamples/PredictiveMaintenance/DeploymentScripts/ModelTraningUsingAutoML.ipynb
+++ b/SQLEdgeSamples/IoTEdgeSamples/PredictiveMaintenance/DeploymentScripts/ModelTraningUsingAutoML.ipynb
@@ -95,7 +95,7 @@
             "source": [
                 "## Before Running this Cell, please change the Subscription ID, Resource Group and the ML Workspace name to that from your environment. \n",
                 "\n",
-                "ws = Workspace(subscription_id=\"61868ab8-16d4-44ec-a9ff-f35d05922847\",\n",
+                "ws = Workspace(subscription_id=\"",\n",
                 "               resource_group=\"Sourabh_ASDE\",\n",
                 "               workspace_name=\"SourabhMLWS\")\n",
                 "# Choose a name for the experiment.\n",
@@ -174,7 +174,7 @@
                 "\n",
                 "import pyodbc\n",
                 "## Insert model into SQL\n",
-                "server = '40.83.17.22,1600' # SQL Server IP address\n",
+                "server = '' # SQL Server IP address\n",
                 "username = 'sa' # SQL Server username\n",
                 "password = '!Locks123' # SQL Server password\n",
                 "database = 'PredictiveMaintenance'\n",
