--- a/SQLEdgeSamples/IoTEdgeSamples/PredictiveMaintenance/DeploymentScripts/ModelTraningUsingAutoML.ipynb
+++ b/SQLEdgeSamples/IoTEdgeSamples/PredictiveMaintenance/DeploymentScripts/ModelTraningUsingAutoML.ipynb
@@ -95,9 +95,9 @@
             "source": [
                 "## Before Running this Cell, please change the Subscription ID, Resource Group and the ML Workspace name to that from your environment. \n",
                 "\n",
-                "ws = Workspace(subscription_id=\"",\n",
-                "               resource_group=\"Sourabh_ASDE\",\n",
-                "               workspace_name=\"SourabhMLWS\")\n",
+                "ws = Workspace(subscription_id=\"YourAzureSubscriptionID\",\n",
+                "               resource_group=\"YourResourceGroup\",\n",
+                "               workspace_name=\"YourMLWorkspaceName\")\n",
                 "# Choose a name for the experiment.\n",
                 "experiment_name = 'PredictiveMaintenance_Classification'\n",
                 "experiment = Experiment(ws, experiment_name)"
